--- a/index.css
+++ b/index.css
@@ -173,7 +173,7 @@ ul {
 
 .down {
   transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
+  /*-webkit-transform: rotate(45deg);*/
 }
 
 .drop-btn {
@@ -268,6 +268,7 @@ ul {
   background-color: #ebf2f2;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .list {
@@ -327,11 +328,147 @@ ul {
 
 .article-item__p {
   line-height: 1.7rem;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  padding-bottom: 3rem;
 }
 
+.search-field {
+  display: flex;
+  justify-content: center;
+}
 
+.search-field__input {
+  display: flex;
+  width: 15%;
+  height: 2.25rem;
+  padding: 0.375rem 0.75rem;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #bdbdbd;
+  border-radius: 0.25rem;
+  transition:
+    border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+}
+
+.search-field__input::placeholder {
+  color: #212529;
+  opacity: 0.4;
+}
+
+.search-field__input:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #6cb52d;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem #acc394;
+}
+
+.overlay {
+  display: block;
+}
+
+.burger-menu {
+  display: none;
+}
+
+.menu-content {
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  z-index: 3;
+}
+
+.menu-item {
+  color: white;
+  margin: 1rem 0;
+}
+
+.menu-item__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.menu-item__arrow {
+  border: solid #bdbdbd;
+  background-color: transparent;
+  border-width: 0 1.5px 1.5px 0;
+  display: inline-block;
+  padding: 7px;
+  margin-right: 7px;
+  position: relative;
+}
+
+.menu-item__h1 {
+  font-size: 2rem;
+  font-weight: 200;
+}
+
+.answer {
+  border-top: 1px solid hsla(0, 0%, 100%, 0.4);
+  display: block;
+  overflow: hidden;
+  height: 1px;
+  transition: max-height 0.3s ease-out;
+}
+
+.my-3 {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.answer-item:first-child {
+  margin-top: 1rem;
+}
+
+.answer-item {
+  font-weight: 300;
+  font-size: 1.2rem;
+  color: #98afae;
+  text-decoration: none;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.answer-item:hover {
+  color: #6cb52d;
+}
+
+.answer.show {
+  display: block;
+  height: max-content;
+  position: relative;
+  z-index: 3;
+}
+
+.close {
+  display: none;
+}
+
+.close:before,
+.close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #ffffff;
+  z-index: 100;
+}
+
+.close:before {
+  transform: rotate(45deg);
+}
+
+.close:after {
+  transform: rotate(-45deg);
+}
 
 @media screen and (max-width: 800px) {
   .article-item {
@@ -366,17 +503,69 @@ ul {
 }
 
 @media screen and (max-width: 900px) {
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #191e1e;
+    z-index: 3;
+    display: none;
+  }
+
+  .close {
+    position: fixed;
+    right: 32px;
+    top: 20px;
+    width: 20px;
+    height: 32px;
+    opacity: 0.3;
+    z-index: 100;
+  }
+
+  .burger-menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #191e1e;
+    z-index: 3;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
+    overflow-y: auto;
+  }
+
   .navbar-menu {
     display: none;
   }
 
+  .header .logo {
+    width: 70%;
+  }
+
+  .hm-menu {
+    border: none;
+    background-color: transparent;
+    z-index: 5;
+  }
+
   .hm-menu div {
     display: block;
+    z-index: 5;
   }
 
   .main {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .hm-menu {
+    display: none;
   }
 }
 
@@ -391,5 +580,13 @@ ul {
   .container {
     min-width: 1345px;
     max-width: 1346px;
+  }
+
+  .hm-menu {
+    display: none;
+  }
+
+  .close {
+    display: none;
   }
 }
